fix: align font-size calculations to 24px base

--- a/ArcticOwl/src/styles/base/_reset.scss
+++ b/ArcticOwl/src/styles/base/_reset.scss
@@ -33,7 +33,7 @@ body {
   font-size: 24px;
   height: 100%;
   width: 100%;
-  font-size: 100%;
+
   line-height: 1;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
