--- a/ArcticOwl/src/styles/main.scss
+++ b/ArcticOwl/src/styles/main.scss
@@ -12,7 +12,6 @@
 }
 
 body {
-  font-size: rem(24);
   padding-top: 140px;
   font-family: "Mina", sans-serif;
   background-color: $primary-color;
